err/rbco.nautilusscripts.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Unidecode-1.0.22.dist-info'...
Listing './lib/python3.5/site-packages/clom'...
Listing './lib/python3.5/site-packages/clom-0.7.5.egg-info'...
Listing './lib/python3.5/site-packages/mutagen'...
Listing './lib/python3.5/site-packages/mutagen/_senf'...
Listing './lib/python3.5/site-packages/mutagen/_tools'...
Listing './lib/python3.5/site-packages/mutagen/asf'...
Listing './lib/python3.5/site-packages/mutagen/id3'...
Listing './lib/python3.5/site-packages/mutagen/mp3'...
Listing './lib/python3.5/site-packages/mutagen/mp4'...
Listing './lib/python3.5/site-packages/mutagen-1.39.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/rbco'...
Listing './lib/python3.5/site-packages/rbco/nautilusscripts'...
Compiling './lib/python3.5/site-packages/rbco/nautilusscripts/install.py'...
***   File "./lib/python3.5/site-packages/rbco/nautilusscripts/install.py", line 53
    print 'Symlinking %s to %s ...' % (original_path, new_path)
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/rbco/nautilusscripts/misc.py'...
***   File "./lib/python3.5/site-packages/rbco/nautilusscripts/misc.py", line 26
    print "ERROR: " + f + " not readable."
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rbco/nautilusscripts/wrapper.py'...
***   File "./lib/python3.5/site-packages/rbco/nautilusscripts/wrapper.py", line 10
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rbco/rename'...
Listing './lib/python3.5/site-packages/rbco.nautilusscripts-0.8.egg-info'...
Listing './lib/python3.5/site-packages/rbco.rename-0.5.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/unidecode'...
Listing './share'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
